v1.3beta
* Added "preamble" option to tcp interfaces
* Fixed bugs in failover specification parsing
* Added udp: interface type

v1.2: January 6th 2015
* eol=n now optional on other interface types
* srctag=input option
* owner=,group= and perm= options for pty and output file interfaces
* Fixed bug in tcp server src TAGs
* Fixed multiple tcp persist bugs
* Remove pty symlinks on exit
* Updates for NetBSD portability
* Fixed TAG checksum bug

v1.1.1: November 12th 2014
* Added presist=fromstart option
* Fixed serial ports in OS X
* Fixed processing of file interfaces with "eol=rn"
* Fixed specification of multicast interface
* Fixed bug with outbound serial interface TAG processing
* Fixed bug with TAG timestamps
* Added fromstart value for persist option
* Minor comment corrections
* Minor changes for greater POSIX compatibility

v1.1: June 5th 2014
* Parsing algorithm changed to strip TAG blocks
* Added optional TAG-based timestamping
* Added optional TAG-based source identifiers
* Added GoFree support
* Added loopback option
* Added keepalive options to tcp interfaces
* Added timeout option to tcp interfaces
* Added more supported baud rates for serial and pty interfaces
* More consistent interface specifiers for broadcast and multicast
* Corrected bug in default port assignment for broadcast interfaces
* Fixed bugs in tcp persist code

v1.0: 31st August 2013
* Added multicast support
* Added "persist" and "retry" options for tcp client interfaces
* Added support for rate limiting
* Disable Nagle algorithm on tcp interfaces
* Fix bug in appending to non-existent files
* Fix hang when configuration with no inputs specified
* Corrected multiple typos in README

v0.2.11: 25th June 2013
* Fixed error with seatalk flag in serial.c
* Fixed makefile for bsd/macos
* Improved error reporting for broadcast interfaces
* Fix failure-to-exit bug when using tcp server
* Special handling of and improved support for FIFOs
* Ignore SIGPIPE to avoid crashes writing to FIFOs