@@ -2,6 +2,8 @@ v1.3beta
 * Added "preamble" option to tcp interfaces
 * Fixed bugs in failover specification parsing
 * Added udp: interface type
+* Added AIS coalescing
+* Added strict parsing option
 
 v1.2: January 6th 2015
 * eol=n now optional on other interface types
